--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <!-- Don't forget to link your CSS file! -->
+    <link rel="stylesheet" href=./style.css>
   </head>
   <body>
     <header>
@@ -26,6 +27,7 @@
     </section>
 
     <section id="details">
+      <span>
       <div>
         <h3>Contact</h3>
         <p>
@@ -61,6 +63,7 @@
           <a href="#" target="_blank">Twitter</a>
         </p>
       </div>
+      </span>
     </section>
   </body>
 </html>
